--- a/angular.json
+++ b/angular.json
@@ -29,11 +29,11 @@
             ],
             "styles": [
               "src/styles.scss",
-              "C:/vsc_projecten/bitbucket/angular-deliveries-FL/node_modules/bootstrap/dist/css/bootstrap.min.css"
+              "node_modules/bootstrap/dist/css/bootstrap.min.css"
             ],
             "scripts": [
-              "C:/vsc_projecten/bitbucket/angular-deliveries-FL/node_modules/jquery/dist/jquery.min.js",
-              "C:/vsc_projecten/bitbucket/angular-deliveries-FL/node_modules/bootstrap/dist/js/bootstrap.min.js"
+              "node_modules/jquery/dist/jquery.js",
+              "node_modules/bootstrap/dist/js/bootstrap.min.js"
             ]
           },
           "configurations": {
